# privacy-redirect

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerpush.sh  Makefile  README.md  build.sh  fly.toml  k8s-deployment.yaml
.github/workflows/: check-and-lint.yaml  deploy-to-fly-io.yml  main.yml  push.yml  test.yaml
browser-ext/: build.sh  ext.js  manifest.json  manifest_v3.json  script.js
browser-ext/manifest_v3/: rules_1.json
frontend/: README.md  asset-manifest.json  index.html  package-lock.json  package.json  privacy-policy.html
frontend/favicons/: site.webmanifest
frontend/public/: index.html
frontend/public/app/: script.js
frontend/src/: App.css  App.js  Home.css  Home.js  Layout.js  PrivacyPolicy.js  http.js  index.css  index.js
frontend/static/css/: main.61d60336.css  main.61d60336.css.map  main.css
frontend/static/js/: main.0ca9565c.js  main.0ca9565c.js.map
tracking-params/: Cargo.toml  README.md
tracking-params/benches/: clean.rs
tracking-params/src/: lib.rs  params.rs  rules.rs
web/: Cargo.toml  README.md  build.rs
web/src/: handlers.rs  main.rs  middleware.rs  server.rs  tracing.rs
web/src/middleware/: mod.rs
