[package]
name = "tracking-params"
version = "0.1.1"
edition = "2021"
description = "Removes unwanted tracking paramters from URLs"
documentation = "https://docs.rs/tracking-params"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
lazy_static = "1.4.0"
urlencoding = "2.1.2"

[dev-dependencies]
test-case = "2.2.2"