[package]
name = "tracking-params"
version = "0.1.5"
edition = "2021"
description = "Removes unwanted tracking parameters from URLs"
documentation = "https://docs.rs/tracking-params"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mustakimali/privacy-redirect"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
lazy_static = "1.4.0"
urlencoding = "2.1.2"
derivative = "2.2.0"
anyhow = "1.0.68"

[dev-dependencies]
test-case = "2.2.2"
criterion = "0.4.0"

[[bench]]
name = "clean"
harness = false