[package]
name = "privacy-redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracking-params = {path = "../tracking-params"}

actix-web = "4.2.1"
actix-files = "0.6.2"
anyhow = "1.0.67"
thiserror = "1.0.38"
tracing = "0.1.37"
opentelemetry = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
opentelemetry-prometheus = "0.11.0"
actix-web-opentelemetry = { version = "0.13.0", features = ["metrics-prometheus"]}
#tracing-opentelemetry = { version = "0.18" }
#tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "std"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
chrono = { version = "0.4.23", features = ["serde"]}
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.91"
urlencoding = "2.1.2"
html-escape = "0.2.13"
blake3 = "1.3.3"
lazy_static = "1.4.0"

opentelemetry-otlp = { version = "0.10", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.17.0"
tracing-subscriber = { version = "0.3.16", features = ["std", "env-filter"] }
reqwest = "0.11.13"

tracing-actix-web = "0.7.1"