[package]
name = "privacy-redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracking-params = {path = "../tracking-params"}

actix-web = "4.2.1"
actix-files = "0.6.2"
anyhow = "1.0.67"
thiserror = "1.0.38"
tracing = "0.1.37"
opentelemetry = { version = "0.17", features = ["rt-tokio-current-thread"] }
actix-web-prometheus = "0.1.2"
opentelemetry-otlp = { version = "0.10", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.17.0"
tracing-subscriber = { version = "0.3.16", features = ["std", "env-filter"] }
tracing-actix-web = "0.7.1"
reqwest = "0.11.13"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
chrono = { version = "0.4.23", features = ["serde"]}
serde_json = "1.0.91"
urlencoding = "2.1.2"
blake3 = "1.3.3"
lazy_static = "1.4.0"
futures-util = "0.3.25"
paste = "1.0"
