[package]
name = "privacy-redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracking-params = {path = "../tracking-params"}

actix-web = "4"
actix-files = "0.6"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
actix-web-prometheus = "0.1"
opentelemetry-otlp = { version = "0.11", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
tracing-actix-web = "0.7"
reqwest = "0.11"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
chrono = { version = "0.4", features = ["serde"]}
serde_json = "1.0"
urlencoding = "2.1"
blake3 = "1.3"
lazy_static = "1.4"
futures-util = "0.3"
paste = "1.0"
